--- a/index.html
+++ b/index.html
@@ -317,18 +317,18 @@
 			</div>
 			<div class="row b-footerForm b-footerForm_marginBottom">
 				<div class="form-group">
-					<input type="text" class="form-control b-footerForm__row1 b-footerForm__row1_marginRight" placeholder="Name">
+					<input type="text" name="name" class="form-control b-footerForm__row1 b-footerForm__row1_marginRight" placeholder="Name">
 				</div>
 				<div class="form-group">
-					<input type="email" class="form-control b-footerForm__row1 b-footerForm__row1_marginRight" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+					<input type="text" name="email" class="form-control b-footerForm__row1 b-footerForm__row1_marginRight" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
 				</div>
 				<div class="form-group">
-					<input type="text" class="form-control b-footerForm__row1 b-footerForm__row1_marginRight" placeholder="Phone">
+					<input type="text" name="phone" class="form-control b-footerForm__row1 b-footerForm__row1_marginRight" placeholder="Phone">
 				</div>
 				<div class="form-group">
 					<textarea class="form-control b-footerForm__row2 b-footerForm__row2_marginRight" id="exampleFormControlTextarea1" rows="1" placeholder="Message"></textarea>
 				</div>
-				<button type="submit" class="btn btn-primary b-footerForm__btn">Submit</button>
+				<button type="submit" class="btn btn-primary b-footerForm__btn" onclick="check()">Submit</button>
 			</div>
 			<div class="row b-footerSocials b-footerSocials_marginBottom">
 				<img src="images/facebook.png" alt="facebook">
@@ -360,6 +360,7 @@
 	crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
 	crossorigin="anonymous"></script>
+	<script src="scripts/script.js"></script>
 </body>
 
 </html>
